--- a/main_code/tsconfig.json
+++ b/main_code/tsconfig.json
@@ -9,6 +9,12 @@
         ],
         "sourceMap": true,
         "rootDir": "src",
-        "strict": true
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "types": [
+            "jest",
+            "node"
+        ]
     }
 }
