--- a/main_code/tsconfig.json
+++ b/main_code/tsconfig.json
@@ -16,5 +16,9 @@
             "jest",
             "node"
         ]
-    }
+    },
+    "exclude": [
+        "test-files",
+        "node_modules"
+    ]
 }
